--- a/init.html
+++ b/init.html
@@ -3,326 +3,246 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>助记词初始化（FIDO2 加密 + 蒙层长按解锁）</title>
+  <title>助记词初始化（FIDO2 加密 + 整块遮挡）</title>
   <style>
-    :root{
-      --bg:#0b1220;--card:#0f1724;--muted:#9ca3af;--text:#e5e7eb;
-      --accent:#60a5fa;--good:#10b981;--bad:#ef4444;--line:#1f2937;
-    }
-    html,body{background:var(--bg);color:var(--text);margin:0;font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,PingFang SC,Microsoft YaHei,sans-serif;}
-    .wrap{max-width:980px;margin:32px auto;padding:18px}
-    h1{margin:0 0 12px}
-    .card{background:var(--card);border:1px solid rgba(255,255,255,0.06);border-radius:14px;padding:18px;margin-bottom:18px;box-shadow:0 8px 24px rgba(0,0,0,.35)}
-    .row{display:flex;align-items:center;gap:12px;margin:12px 0}
-    .muted{color:var(--muted)}
-    button{
-      background:linear-gradient(180deg,#0f172a,#091427);border:1px solid rgba(255,255,255,0.06);
-      color:var(--text);padding:10px 14px;border-radius:12px;cursor:pointer
-    }
-    button:hover{filter:brightness(1.06)}
-    button[disabled]{opacity:.45;cursor:not-allowed}
-    .ok{color:var(--good)} .err{color:var(--bad)}
-    .small{font-size:13px;color:var(--muted)}
+    :root { --bg:#0b1220; --card:#0f1724; --line:#1f2937; --text:#e5e7eb; --muted:#9ca3af; --good:#10b981; --bad:#ef4444; --accent:#60a5fa; }
+    html,body{ background:var(--bg); color:var(--text); margin:0; font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,PingFang SC,Microsoft YaHei,sans-serif; }
+    .wrap{ max-width:980px; margin:32px auto; padding:18px; }
+    h1{ margin:0 0 12px; }
+    .card{ background:var(--card); border:1px solid rgba(255,255,255,.06); border-radius:14px; padding:18px; margin-bottom:18px; box-shadow:0 8px 24px rgba(0,0,0,.35); }
+    .row{ display:flex; gap:12px; align-items:center; margin:10px 0; }
+    button{ background:linear-gradient(180deg,#0f172a,#091427); border:1px solid rgba(255,255,255,.06); color:var(--text); padding:10px 14px; border-radius:12px; cursor:pointer; }
+    button:hover{ filter:brightness(1.06); }
+    button[disabled]{ opacity:.45; cursor:not-allowed; }
+    .muted{ color:var(--muted); }
+    .ok{ color:var(--good); } .err{ color:var(--bad); }
+    .small{ font-size:13px; color:var(--muted); }
 
-    /* 助记词网格 */
-    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
-    .cell{
-      background:linear-gradient(180deg,#071226,#0b1526);
-      border:1px dashed rgba(255,255,255,.06);border-radius:12px;padding:10px;
-      display:flex;align-items:center;gap:10px;min-height:44px
-    }
-    .badge{width:26px;height:26px;border-radius:999px;background:#0b1328;display:grid;place-items:center;color:#9fb4d9}
+    /* 助记词网格 + 整块遮挡 */
+    .grid{ display:grid; grid-template-columns:repeat(3,1fr); gap:10px; }
+    .cell{ background:linear-gradient(180deg,#071226,#0b1526); border:1px dashed rgba(255,255,255,.08); border-radius:12px; padding:10px; min-height:44px; display:flex; align-items:center; gap:10px; }
+    .badge{ width:26px; height:26px; border-radius:999px; background:#0b1328; display:grid; place-items:center; color:#9fb4d9; }
 
-    /* 整块遮挡（覆盖在网格上） */
-    .mnemo-box{position:relative}
+    .mnemo-box{ position:relative; }
     .mnemo-mask{
-      position:absolute;inset:10px;display:flex;align-items:center;justify-content:center;
+      position:absolute; inset:10px;
+      display:flex; align-items:center; justify-content:center;
       background:radial-gradient(ellipse at center, rgba(15,23,42,.78) 0%, rgba(2,6,23,.9) 100%);
-      border:1px dashed #334155;border-radius:14px;backdrop-filter:blur(6px)
+      border:1px dashed #334155; border-radius:14px; backdrop-filter:blur(6px);
     }
-    .mask-inner{display:flex;flex-direction:column;align-items:center;gap:10px}
-    .hold-btn{
-      display:flex;align-items:center;gap:10px;border-radius:999px;padding:12px 16px;
-      border:1px solid #1f2a44;background:#0b1328;color:#cfe1ff;cursor:pointer;
-      box-shadow:0 8px 22px rgba(0,0,0,.28);user-select:none
-    }
-    .dot{width:10px;height:10px;border-radius:999px;background:#22d3ee;box-shadow:0 0 0 6px rgba(34,211,238,.15)}
-    .hint{text-align:center;color:#9aa4b4}
-    .progress{height:4px;background:#1f2a44;width:220px;border-radius:99px;overflow:hidden}
-    .bar{height:100%;width:0;background:#22d3ee}
+    .mask-inner{ display:flex; flex-direction:column; align-items:center; gap:10px; }
+    .mask-btn{ display:flex; gap:10px; align-items:center; border-radius:999px; padding:12px 16px; border:1px solid #1f2a44; background:#0b1328; color:#cfe1ff; cursor:pointer; box-shadow:0 8px 22px rgba(0,0,0,.28); }
+    .dot{ width:10px; height:10px; border-radius:999px; background:#22d3ee; box-shadow:0 0 0 6px rgba(34,211,238,.15); }
+    .hint{ color:#9aa4b4; text-align:center; }
 
-    @media (max-width:700px){ .grid{grid-template-columns:repeat(2,1fr)} }
+    @media (max-width:700px){ .grid{ grid-template-columns:repeat(2,1fr); } }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>助记词初始化（FIDO2 加密 + 整块遮挡 + 长按 3 秒）</h1>
+<div class="wrap">
+  <h1>助记词初始化（FIDO2 加密 + 整块遮挡）</h1>
 
-    <!-- A. FIDO2 凭证 -->
-    <div class="card">
-      <h3>步骤 A：注册/复用 FIDO2 凭证</h3>
-      <div class="row">
-        <button id="btn-register">1) 注册或选择本域凭证</button>
-        <span id="reg-tip" class="muted"></span>
-      </div>
-      <div class="small">必须先有凭证；生成时会用该凭证派生 KEK 加密助记词。</div>
+  <!-- A. FIDO2 凭证 -->
+  <div class="card">
+    <h3>步骤 A：注册/复用 FIDO2 凭证</h3>
+    <div class="row">
+      <button id="btn-register">1) 注册或选择本域凭证</button>
+      <span id="reg-tip" class="muted"></span>
+    </div>
+    <div class="small">生成助记词前必须先有凭证，用于派生 KEK 加密助记词。</div>
+  </div>
+
+  <!-- B. 生成 & 展示（默认整块遮挡） -->
+  <div class="card">
+    <h3>步骤 B：生成助记词（默认整块遮挡；点击按钮解密显示 1 分钟）</h3>
+    <div class="row">
+      <button id="btn-gen" disabled>2) 生成助记词</button>
+      <span id="gen-tip" class="muted"></span>
     </div>
 
-    <!-- B. 生成 & 展示 -->
-    <div class="card">
-      <h3>步骤 B：生成助记词（默认整块遮挡；长按 3 秒显示）</h3>
-      <div class="row">
-        <label><input id="cb-backup" type="checkbox"> 生成并下载离线备份（若选中则不显示助记词，仅下载密文 JSON）</label>
-      </div>
-      <div class="row">
-        <button id="btn-gen" disabled>2) 生成助记词</button>
-        <span id="gen-tip" class="muted"></span>
-      </div>
+    <div id="mnemo-card" style="display:none; margin-top:10px">
+      <div class="mnemo-box">
+        <div class="grid" id="mnemo-grid"></div>
 
-      <!-- 助记词卡片：网格 + 整块遮挡 -->
-      <div id="mnemo-card" style="display:none;margin-top:10px">
-        <div class="mnemo-box" id="mnemo-box">
-          <div class="grid" id="mnemo-grid"></div>
-
-          <!-- 蒙层：默认可见；长按 3 秒显示 -->
-          <div class="mnemo-mask" id="mnemo-mask">
-            <div class="mask-inner">
-              <div class="hold-btn" id="hold-btn">
-                <span class="dot"></span>
-                <span id="hold-text">长按 3 秒显示助记词</span>
-              </div>
-              <div class="progress"><div class="bar" id="hold-bar"></div></div>
-              <div class="hint" id="mask-hint">默认遮挡。2 分钟后会清除内存中的明文，再次解锁需要 FIDO2。</div>
-            </div>
+        <!-- 遮挡层：按钮在遮挡上方 -->
+        <div class="mnemo-mask" id="mnemo-mask">
+          <div class="mask-inner">
+            <button class="mask-btn" id="btn-reveal" disabled>
+              <span class="dot"></span><span id="reveal-text">显示助记词（需 FIDO2 解密）</span>
+            </button>
+            <div class="hint" id="mask-hint">助记词仅以密文形式保存在内存中。点击上方按钮，解密后显示 60 秒。</div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- C. 加密并写库（原逻辑） -->
-    <div class="card">
-      <h3>步骤 C：加密 xpub/xprv 并写入数据库</h3>
-      <div class="row">
-        <button id="btn-encrypt" disabled>3) 加密并写入数据库</button>
-        <span id="encrypt-tip" class="muted"></span>
-      </div>
-      <div class="small">bundle 不包含助记词明文。</div>
-    </div>
-
-    <div class="small" id="final"></div>
   </div>
+
+  <!-- C. 加密并写库（你原来的链分支写库逻辑保留） -->
+  <div class="card">
+    <h3>步骤 C：加密 xpub/xprv 并写入数据库</h3>
+    <div class="row">
+      <button id="btn-encrypt" disabled>3) 加密并写入数据库</button>
+      <span id="encrypt-tip" class="muted"></span>
+    </div>
+    <div class="small">bundle 不包含助记词明文。</div>
+  </div>
+</div>
 
 <script type="module">
 /* ===== 依赖 ===== */
 import {
   ensureCredentialWithChoice,
-  deriveKEK,
   deriveKEKWithSalt,
   aesGcmEncryptStr,
   aesGcmDecryptStr,
   loadCredHex,
 } from './js/fido2.js';
-
 import { genMnemonic, mnemonicToSeed, exportBranches } from './js/hdwallet-core.js';
 
 /* ===== 常量与状态 ===== */
-const API_BASE   = 'https://wallet.lucas-l-shang.workers.dev';
-const GRACE_MS   = 120_000; // 首次显示后 2 分钟窗口
-const HOLD_MS    = 3_000;   // 蒙层长按 3 秒
-const REVEAL_MS  = 30_000;  // 之后每次显示 30 秒
+const API_BASE  = 'https://wallet.lucas-l-shang.workers.dev';
+const SHOW_MS   = 60_000;     // 每次显示 60 秒
 
 let branches = null;
-let sealed   = null;        // { ctHex, ivHex, saltHex, credId, ... }
-let plainMnemonic = '';     // 仅窗口期保存
+let sealed   = null;          // { credId, saltHex, ctHex, ivHex }
 let wordCount = 12;
 
-let graceTimer = null;      // 首显 2min 计时器
-let autoMaskTimer = null;   // 解密显示 30s 计时器
-let graceStarted = false;   // 首次显示后才置 true
+let autoMaskTimer = null;
 
-/* ===== DOM ===== */
+/* ===== DOM 工具 ===== */
 const $ = id => document.getElementById(id);
-function showCard(){ const c=$('mnemo-card'); if(c)c.style.display='block'; }
-function showMask(){ const m=$('mnemo-mask'); if(m)m.style.display='flex'; }
-function hideMask(){ const m=$('mnemo-mask'); if(m)m.style.display='none'; }
-function renderGrid(words){
-  const grid=$('mnemo-grid'); if(!grid) return;
-  grid.innerHTML='';
+function renderGridFromWords(words){
+  const grid = $('mnemo-grid'); if(!grid) return;
+  grid.innerHTML = '';
   words.forEach((w,i)=>{
-    const d=document.createElement('div'); d.className='cell';
-    d.innerHTML=`<span class="badge">${i+1}</span><span class="word">${w}</span>`;
+    const d = document.createElement('div'); d.className='cell';
+    d.innerHTML = `<span class="badge">${i+1}</span><span class="word">${w}</span>`;
     grid.appendChild(d);
   });
 }
-function renderMaskedGrid(n){ renderGrid(Array.from({length:n},()=> '•••••')); }
-
-function clearGraceTimer(){ if(graceTimer){ clearTimeout(graceTimer); graceTimer=null; } }
+function renderMaskedGrid(n){ renderGridFromWords(Array.from({length:n},()=> '•••••')); }
+function showCard(){ const c=$('mnemo-card'); if(c) c.style.display='block'; }
+function showMask(){ const m=$('mnemo-mask'); if(m) m.style.display='flex'; }
+function hideMask(){ const m=$('mnemo-mask'); if(m) m.style.display='none'; }
 function clearAutoMask(){ if(autoMaskTimer){ clearTimeout(autoMaskTimer); autoMaskTimer=null; } }
 
-function maskNow(note=''){
-  // 统一遮挡当前网格
-  renderMaskedGrid(wordCount);
-  showMask();
-  if(note){ const hint=$('mask-hint'); if(hint) hint.textContent=note; }
-}
-
-/* ===== 初始：若已有凭证，允许生成 ===== */
+/* ===== 启动时：如果已有凭证，允许生成 ===== */
 document.addEventListener('DOMContentLoaded', ()=>{
   try{
     if(loadCredHex()){
-      const tip=$('reg-tip'); if(tip) tip.innerHTML='<span class="ok">已可使用凭证（本地有凭证）。</span>';
-      const b=$('btn-gen'); if(b) b.disabled=false;
+      $('reg-tip').innerHTML = '<span class="ok">已可使用凭证（本地有凭证）。</span>';
+      $('btn-gen').disabled = false;
     }
   }catch{}
 });
 
-/* ===== 注册/复用 FIDO2 ===== */
+/* ===== A. 注册/复用 FIDO2 ===== */
 $('btn-register').onclick = async ()=>{
-  const tip=$('reg-tip');
+  const tip = $('reg-tip');
   try{
-    const res=await ensureCredentialWithChoice();
-    if(tip){
-      tip.innerHTML = res?.created
-        ? '<span class="ok">已注册新凭证。</span>'
-        : `<span class="ok">已可使用凭证（id: ${(res?.id_hex||'').slice(0,16)}…）。</span>`;
-    }
-    $('btn-gen').disabled=false;
+    const res = await ensureCredentialWithChoice();
+    tip.innerHTML = res?.created
+      ? '<span class="ok">已注册新凭证。</span>'
+      : `<span class="ok">已可使用凭证（id: ${(res?.id_hex||'').slice(0,16)}…）。</span>`;
+    $('btn-gen').disabled = false;
   }catch(e){
-    if(tip) tip.innerHTML=`<span class="err">注册/复用失败：${e?.message||e}</span>`;
+    tip.innerHTML = `<span class="err">注册/复用失败：${e?.message||e}</span>`;
     console.error(e);
   }
 };
 
-/* ===== 生成助记词（默认整块遮挡；首显后才计 2 分钟） ===== */
+/* ===== B-1. 生成助记词（立即加密；清空明文；默认整块遮挡） ===== */
 $('btn-gen').onclick = async ()=>{
-  const tip=$('gen-tip');
+  const tip = $('gen-tip');
   try{
-    // 1) 生成 + 分支
+    // 1) 生成助记词 + 分支
     const mnemonic = genMnemonic(128);
     const words    = mnemonic.trim().split(/\s+/);
     wordCount      = words.length || 12;
+
     const seed     = mnemonicToSeed(mnemonic,'');
     branches       = exportBranches(seed);
-    $('btn-encrypt').disabled=false;
+    $('btn-encrypt').disabled = false;
 
-    // 2) 立即用 FIDO2 加密，得 sealed
-    const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK();
+    // 2) 用随机 salt + 凭证派生 KEK，立刻 AES-GCM 加密助记词
+    const saltU8 = crypto.getRandomValues(new Uint8Array(32));
+    const { kek, credential_id } = await deriveKEKWithSalt(null, saltU8);
     const enc = await aesGcmEncryptStr(kek, mnemonic);
-    sealed = { ctHex: enc.ciphertext, ivHex: enc.nonce, saltHex: toHex(salt), credId: credential_id, rp_id, info };
 
-    // 3) 明文暂存（尚未首显，不启动 2min 计时）
-    plainMnemonic = mnemonic;
-    graceStarted  = false;
-    clearGraceTimer();
-    clearAutoMask();
+    // 3) 仅保存密文材料；清空明文
+    sealed = {
+      credId: credential_id,
+      saltHex: [...saltU8].map(b=>b.toString(16).padStart(2,'0')).join(''),
+      ctHex: enc.ciphertext,
+      ivHex: enc.nonce
+    };
+    try{ // 擦本地副本
+      for(let i=0;i<words.length;i++) words[i]='';
+    }catch{}
+    // 尽量覆盖字符串（JS 不保证，聊胜于无）
+    // 注：内核可能保留旧字符串副本，这在 Web 环境属正常限制
 
-    // 4) UI：显示卡片并整块遮挡
+    // 4) UI：显示卡片、整块遮挡，启用“显示助记词”
     showCard();
     renderMaskedGrid(wordCount);
     showMask();
-    $('hold-text').textContent='长按 3 秒显示助记词';
-    $('mask-hint').textContent='默认遮挡。首次显示后将开始 2 分钟窗口，到点会自动遮挡并清空明文。';
-    tip.textContent='';
-    // 擦 words 副本
-    try{ for(let i=0;i<words.length;i++) words[i]=''; }catch{}
+    $('btn-reveal').disabled = false;
+    $('reveal-text').textContent = '显示助记词（需 FIDO2 解密）';
+    $('mask-hint').textContent = '助记词仅以密文形式保存在内存中。点击上方按钮，解密后显示 60 秒。';
+    tip.textContent = '';
   }catch(e){
-    if(tip) tip.innerHTML=`<span class="err">生成失败：${e?.message||e}</span>`;
+    tip.innerHTML = `<span class="err">生成失败：${e?.message||e}</span>`;
     console.error(e);
   }
 };
 
-/* ===== 长按 3 秒显示：首显 vs 解密 ===== */
-(function bindHold(){
-  const btn=$('hold-btn'), bar=$('hold-bar'), text=$('hold-text');
-  if(!btn||!bar) return;
+/* ===== B-2. 显示助记词（每次都 FIDO2 解密；显示 60 秒） ===== */
+$('btn-reveal').onclick = async ()=>{
+  if(!sealed){ return; }
+  clearAutoMask();
+  const btnText = $('reveal-text');
 
-  let pressing=false, t0=0, rafId=0, timerId=0;
+  try{
+    btnText.textContent = '等待安全密钥…';
+    const { kek } = await deriveKEKWithSalt(sealed.credId, sealed.saltHex);
+    const mnemonic = await aesGcmDecryptStr(kek, { nonce: sealed.ivHex, ciphertext: sealed.ctHex });
 
-  const start = ()=>{
-    if(pressing) return;
-    pressing=true; t0=performance.now(); bar.style.width='0%';
-    const step=()=>{
-      if(!pressing) return;
-      const p=Math.min(1,(performance.now()-t0)/HOLD_MS);
-      bar.style.width=(p*100).toFixed(1)+'%';
-      if(p>=1){ done(); return; }
-      rafId=requestAnimationFrame(step);
-    };
-    rafId=requestAnimationFrame(step);
-    timerId=setTimeout(done,HOLD_MS);
-  };
-  const cancel=()=>{
-    pressing=false;
-    if(rafId) cancelAnimationFrame(rafId);
-    if(timerId) clearTimeout(timerId);
-    bar.style.width='0%';
-  };
+    const words = mnemonic.trim().split(/\s+/);
+    renderGridFromWords(words);
+    hideMask();
 
-  const startGraceIfFirstReveal = ()=>{
-    if(!graceStarted){
-      graceStarted=true;
-      clearGraceTimer();
-      graceTimer=setTimeout(()=>{
-        // 2 分钟到：遮挡 + 清空明文
-        plainMnemonic='';
-        clearAutoMask();
-        maskNow('2 分钟窗口已结束。再次显示需要 FIDO2。');
-      }, GRACE_MS);
-    }
-  };
-
-  const done = async ()=>{
-    cancel();
-    try{
-      let mnemonic, mode;
-      clearAutoMask(); // 每次显示先清前一个 30s 计时
-
-      if(plainMnemonic){
-        // 首显（或窗口内再次查看）：不用 FIDO2
-        mnemonic = plainMnemonic;
-        mode = 'plain';
-        startGraceIfFirstReveal(); // 只有“首次成功显示”才开启 2min
-      }else{
-        // 窗口外：FIDO2 解密
-        const { kek } = await deriveKEKWithSalt(saved.cred_hex, saved.mnemo_salt_hex);
-        const mnemonic = await aesGcmDecryptStr(kek, saved.mnemo_enc);
-        mode = 'decrypted';
-      }
-
-      const words = mnemonic.trim().split(/\s+/);
-      renderGrid(words);
-      hideMask();
-
-      // 计时：首显=2min(已在上面布置)；解密=30s 自动遮挡
-      if(mode==='decrypted'){
-        autoMaskTimer=setTimeout(()=>{
-          maskNow('已自动遮挡。再次显示仍需 FIDO2。');
-        }, REVEAL_MS);
-      }
-      // 尽量擦局部副本
+    // 60 秒后自动遮挡并清理明文副本
+    autoMaskTimer = setTimeout(()=>{
+      renderMaskedGrid(wordCount);
+      showMask();
       try{ for(let i=0;i<words.length;i++) words[i]=''; }catch{}
-    }catch(e){
-      console.error(e);
-      text.textContent='解锁失败：请重试';
-      setTimeout(()=>{ text.textContent='长按 3 秒显示助记词'; }, 1500);
-    }
-  };
+      $('mask-hint').textContent = '已自动遮挡。再次显示仍需 FIDO2 解密。';
+    }, SHOW_MS);
 
-  ['mousedown','touchstart'].forEach(ev=>btn.addEventListener(ev,start));
-  ['mouseup','mouseleave','touchend','touchcancel'].forEach(ev=>btn.addEventListener(ev,cancel));
-})();
+    btnText.textContent = '再次显示需重新验证';
+  }catch(e){
+    console.error(e);
+    btnText.textContent = '解密失败：请重试';
+    setTimeout(()=>{ btnText.textContent='显示助记词（需 FIDO2 解密）'; }, 1500);
+  }
+};
 
-/* ===== 写库（未改） ===== */
+/* ===== C. 写库（保留你原逻辑） ===== */
 $('btn-encrypt').onclick = async ()=>{
   const tip=$('encrypt-tip');
   try{
     if(!branches){ alert('请先生成助记词'); return; }
     tip.textContent='请触摸密钥以继续…';
 
-    const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK();
+    // 这里与你原来的写库逻辑一致（与助记词无关）
+    const saltU8 = crypto.getRandomValues(new Uint8Array(32));
+    const { kek, credential_id } = await deriveKEKWithSalt(null, saltU8);
     const enc = async s => s ? await aesGcmEncryptStr(kek, s) : null;
+
     const bundle = {
-      KEKInfo:{ rp_id, info, salt: toHex(salt), credential_id },
+      KEKInfo:{ rp_id: location.hostname, info:'wallet-priv-bundle-v1',
+                salt: [...saltU8].map(b=>b.toString(16).padStart(2,'0')).join(''),
+                credential_id },
       chains:{
         ETH:  { path: branches.ETH.path,  PubEnc: await enc(branches.ETH.xpub),   PrivEnc: await enc(branches.ETH.xprv) },
         BTC:  { path: branches.BTC.path,  PubEnc: await enc(branches.BTC.xpub_z), PrivEnc: await enc(branches.BTC.xprv_z) },
@@ -349,6 +269,5 @@ $('btn-encrypt').onclick = async ()=>{
   }
 };
 </script>
-
 </body>
 </html>
