--- a/init.html
+++ b/init.html
@@ -3,268 +3,277 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>助记词初始化（FIDO2 加密 + 整块遮挡）</title>
+  <title>助记词初始化（FIDO2 加密 + 整块遮挡 + 长按解锁）</title>
   <style>
-    :root { --bg:#0b1220; --card:#0f1724; --line:#1f2937; --text:#e5e7eb; --muted:#9ca3af; --good:#10b981; --bad:#ef4444; --accent:#60a5fa; }
-    html,body{ background:var(--bg); color:var(--text); margin:0; font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,PingFang SC,Microsoft YaHei,sans-serif; }
-    .wrap{ max-width:980px; margin:32px auto; padding:18px; }
-    h1{ margin:0 0 12px; }
-    .card{ background:var(--card); border:1px solid rgba(255,255,255,.06); border-radius:14px; padding:18px; margin-bottom:18px; box-shadow:0 8px 24px rgba(0,0,0,.35); }
-    .row{ display:flex; gap:12px; align-items:center; margin:10px 0; }
-    button{ background:linear-gradient(180deg,#0f172a,#091427); border:1px solid rgba(255,255,255,.06); color:var(--text); padding:10px 14px; border-radius:12px; cursor:pointer; }
-    button:hover{ filter:brightness(1.06); }
-    button[disabled]{ opacity:.45; cursor:not-allowed; }
-    .muted{ color:var(--muted); }
-    .ok{ color:var(--good); } .err{ color:var(--bad); }
-    .small{ font-size:13px; color:var(--muted); }
+    :root{ --bg:#0b1220; --card:#0f1724; --muted:#9ca3af; --text:#e5e7eb; --line:#1f2937; --good:#10b981; --bad:#ef4444; }
+    html,body{background:var(--bg);color:var(--text);margin:0;font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,PingFang SC,Microsoft YaHei,sans-serif;}
+    .wrap{max-width:980px;margin:32px auto;padding:18px}
+    .card{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:14px;padding:18px;margin-bottom:18px;box-shadow:0 8px 24px rgba(0,0,0,.35)}
+    .row{display:flex;align-items:center;gap:12px;margin:12px 0}
+    .muted{color:var(--muted)}
+    .ok{color:var(--good)} .err{color:var(--bad)}
+    button{background:#0f172a;border:1px solid #27324a;color:#e5e7eb;padding:10px 14px;border-radius:12px;cursor:pointer}
+    button:hover{filter:brightness(1.06)} button[disabled]{opacity:.45;cursor:not-allowed}
 
-    /* 助记词网格 + 整块遮挡 */
-    .grid{ display:grid; grid-template-columns:repeat(3,1fr); gap:10px; }
-    .cell{ background:linear-gradient(180deg,#071226,#0b1526); border:1px dashed rgba(255,255,255,.08); border-radius:12px; padding:10px; min-height:44px; display:flex; align-items:center; gap:10px; }
-    .badge{ width:26px; height:26px; border-radius:999px; background:#0b1328; display:grid; place-items:center; color:#9fb4d9; }
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
+    .cell{background:linear-gradient(180deg,#071226,#0b1526);border:1px dashed rgba(255,255,255,.06);border-radius:12px;padding:10px;display:flex;align-items:center;gap:10px;min-height:44px}
+    .badge{width:26px;height:26px;border-radius:999px;background:#0b1328;display:grid;place-items:center;color:#9fb4d9}
 
-    .mnemo-box{ position:relative; }
-    .mnemo-mask{
-      position:absolute; inset:10px;
-      display:flex; align-items:center; justify-content:center;
-      background:radial-gradient(ellipse at center, rgba(15,23,42,.78) 0%, rgba(2,6,23,.9) 100%);
-      border:1px dashed #334155; border-radius:14px; backdrop-filter:blur(6px);
-    }
-    .mask-inner{ display:flex; flex-direction:column; align-items:center; gap:10px; }
-    .mask-btn{ display:flex; gap:10px; align-items:center; border-radius:999px; padding:12px 16px; border:1px solid #1f2a44; background:#0b1328; color:#cfe1ff; cursor:pointer; box-shadow:0 8px 22px rgba(0,0,0,.28); }
-    .dot{ width:10px; height:10px; border-radius:999px; background:#22d3ee; box-shadow:0 0 0 6px rgba(34,211,238,.15); }
-    .hint{ color:#9aa4b4; text-align:center; }
-
-    @media (max-width:700px){ .grid{ grid-template-columns:repeat(2,1fr); } }
+    .mnemo-box{position:relative}
+    .mnemo-mask{position:absolute;inset:10px;display:flex;align-items:center;justify-content:center;background:radial-gradient(ellipse at center, rgba(15,23,42,.78) 0%, rgba(2,6,23,.9) 100%);border:1px dashed #334155;border-radius:14px;backdrop-filter:blur(6px)}
+    .mask-inner{display:flex;flex-direction:column;align-items:center;gap:10px}
+    .hold-btn{display:flex;align-items:center;gap:10px;border-radius:999px;padding:12px 16px;border:1px solid #1f2a44;background:#0b1328;color:#cfe1ff;cursor:pointer;box-shadow:0 8px 22px rgba(0,0,0,.28);user-select:none}
+    .dot{width:10px;height:10px;border-radius:999px;background:#22d3ee;box-shadow:0 0 0 6px rgba(34,211,238,.15)}
+    .progress{height:4px;background:#1f2a44;width:220px;border-radius:99px;overflow:hidden}
+    .bar{height:100%;width:0;background:#22d3ee}
+    @media (max-width:700px){ .grid{grid-template-columns:repeat(2,1fr)} }
   </style>
 </head>
 <body>
-<div class="wrap">
-  <h1>助记词初始化（FIDO2 加密 + 整块遮挡）</h1>
-
-  <!-- A. FIDO2 凭证 -->
-  <div class="card">
-    <h3>步骤 A：注册/复用 FIDO2 凭证</h3>
-    <div class="row">
-      <button id="btn-register">1) 注册或选择本域凭证</button>
-      <span id="reg-tip" class="muted"></span>
-    </div>
-    <div class="small">生成助记词前必须先有凭证，用于派生 KEK 加密助记词。</div>
-  </div>
-
-  <!-- B. 生成 & 展示（默认整块遮挡） -->
-  <div class="card">
-    <h3>步骤 B：生成助记词（默认整块遮挡；点击按钮解密显示 1 分钟）</h3>
-    <div class="row">
-      <button id="btn-gen" disabled>2) 生成助记词</button>
-      <span id="gen-tip" class="muted"></span>
+  <div class="wrap">
+    <!-- A. 凭证 -->
+    <div class="card">
+      <h3>步骤 A：注册/复用 FIDO2 凭证</h3>
+      <div class="row">
+        <button id="btn-register">1) 注册或选择本域凭证</button>
+        <span id="reg-tip" class="muted"></span>
+      </div>
+      <div class="muted">生成/解锁都需要该凭证以派生密钥。</div>
     </div>
 
-    <div id="mnemo-card" style="display:none; margin-top:10px">
-      <div class="mnemo-box">
-        <div class="grid" id="mnemo-grid"></div>
+    <!-- B. 生成（加密后清明文） + 显示（需长按解锁） -->
+    <div class="card">
+      <h3>步骤 B：生成助记词（生成时即加密；长按 3 秒解锁显示 60 秒）</h3>
+      <div class="row">
+        <button id="btn-gen" disabled>2) 生成助记词</button>
+        <span id="gen-tip" class="muted"></span>
+      </div>
 
-        <!-- 遮挡层：按钮在遮挡上方 -->
-        <div class="mnemo-mask" id="mnemo-mask">
-          <div class="mask-inner">
-            <button class="mask-btn" id="btn-reveal" disabled>
-              <span class="dot"></span><span id="reveal-text">显示助记词（需 FIDO2 解密）</span>
-            </button>
-            <div class="hint" id="mask-hint">助记词仅以密文形式保存在内存中。点击上方按钮，解密后显示 60 秒。</div>
+      <div id="mnemo-card" style="display:none;margin-top:10px">
+        <div class="mnemo-box">
+          <div class="grid" id="mnemo-grid"></div>
+
+          <!-- 整块遮挡 -->
+          <div class="mnemo-mask" id="mnemo-mask">
+            <div class="mask-inner">
+              <div class="hold-btn" id="hold-btn"><span class="dot"></span><span id="hold-text">长按 3 秒显示助记词</span></div>
+              <div class="progress"><div class="bar" id="hold-bar"></div></div>
+              <div class="muted" id="mask-hint">显示后 60 秒自动遮挡并清空明文。</div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- C. 加密并写库（你原来的链分支写库逻辑保留） -->
-  <div class="card">
-    <h3>步骤 C：加密 xpub/xprv 并写入数据库</h3>
-    <div class="row">
-      <button id="btn-encrypt" disabled>3) 加密并写入数据库</button>
-      <span id="encrypt-tip" class="muted"></span>
+    <!-- C. 写库（直接用已加密的分支数据） -->
+    <div class="card">
+      <h3>步骤 C：写库</h3>
+      <div class="row">
+        <button id="btn-save" disabled>3) 写入数据库</button>
+        <span id="save-tip" class="muted"></span>
+      </div>
+      <div class="muted">写库直接使用内存中的已加密 xprv/xpub；bundle 不包含助记词明文。</div>
     </div>
-    <div class="small">bundle 不包含助记词明文。</div>
   </div>
-</div>
 
 <script type="module">
-/* ===== 依赖 ===== */
 import {
   ensureCredentialWithChoice,
+  deriveKEK,
   deriveKEKWithSalt,
   aesGcmEncryptStr,
-  aesGcmDecryptStr,
-  loadCredHex,
+  aesGcmDecryptStr
 } from './js/fido2.js';
+
 import { genMnemonic, mnemonicToSeed, exportBranches } from './js/hdwallet-core.js';
 
-/* ===== 常量与状态 ===== */
+/* ====== 配置 ====== */
 const API_BASE  = 'https://wallet.lucas-l-shang.workers.dev';
-const SHOW_MS   = 60_000;     // 每次显示 60 秒
+const HOLD_MS   = 3000;     // 长按 3 秒
+const REVEAL_MS = 60000;    // 显示 60 秒
 
-let branches = null;
-let sealed   = null;          // { credId, saltHex, ctHex, ivHex }
-let wordCount = 12;
+/* ====== 状态（仅保留密文与元数据） ====== */
+let sealedMnemonic = null;  // { enc:{nonce,ciphertext}, credId, saltHex }
+let kekMeta        = null;  // { rp_id, info, credential_id, saltHex }
+let encBranches    = null;  // { ETH:{path,PubEnc,PrivEnc}, ... }
+let wordCount      = 12;    // 渲染占位
 
-let autoMaskTimer = null;
+let autoMaskTimer  = null;
 
-/* ===== DOM 工具 ===== */
+/* ====== DOM 助手 ====== */
 const $ = id => document.getElementById(id);
-function renderGridFromWords(words){
-  const grid = $('mnemo-grid'); if(!grid) return;
-  grid.innerHTML = '';
+function show(el, yes){ if(el) el.style.display = yes ? '' : 'none'; }
+function renderMaskedGrid(n){
+  const g=$('mnemo-grid'); g.innerHTML='';
+  for(let i=1;i<=n;i++){
+    const d=document.createElement('div'); d.className='cell';
+    d.innerHTML = `<span class="badge">${i}</span><span>•••••</span>`;
+    g.appendChild(d);
+  }
+}
+function renderWords(words){
+  const g=$('mnemo-grid'); g.innerHTML='';
   words.forEach((w,i)=>{
-    const d = document.createElement('div'); d.className='cell';
-    d.innerHTML = `<span class="badge">${i+1}</span><span class="word">${w}</span>`;
-    grid.appendChild(d);
+    const d=document.createElement('div'); d.className='cell';
+    d.innerHTML = `<span class="badge">${i+1}</span><span>${w}</span>`;
+    g.appendChild(d);
   });
 }
-function renderMaskedGrid(n){ renderGridFromWords(Array.from({length:n},()=> '•••••')); }
-function showCard(){ const c=$('mnemo-card'); if(c) c.style.display='block'; }
-function showMask(){ const m=$('mnemo-mask'); if(m) m.style.display='flex'; }
-function hideMask(){ const m=$('mnemo-mask'); if(m) m.style.display='none'; }
+function maskNow(msg){
+  clearAutoMask();
+  renderMaskedGrid(wordCount);
+  show($('mnemo-mask'), true);
+  if (msg) $('mask-hint').textContent = msg;
+}
 function clearAutoMask(){ if(autoMaskTimer){ clearTimeout(autoMaskTimer); autoMaskTimer=null; } }
 
-/* ===== 启动时：如果已有凭证，允许生成 ===== */
-document.addEventListener('DOMContentLoaded', ()=>{
-  try{
-    if(loadCredHex()){
-      $('reg-tip').innerHTML = '<span class="ok">已可使用凭证（本地有凭证）。</span>';
-      $('btn-gen').disabled = false;
-    }
-  }catch{}
-});
-
-/* ===== A. 注册/复用 FIDO2 ===== */
+/* ====== A. 注册/复用凭证 ====== */
 $('btn-register').onclick = async ()=>{
-  const tip = $('reg-tip');
+  const tip=$('reg-tip');
   try{
     const res = await ensureCredentialWithChoice();
-    tip.innerHTML = res?.created
+    tip.innerHTML = res.created
       ? '<span class="ok">已注册新凭证。</span>'
-      : `<span class="ok">已可使用凭证（id: ${(res?.id_hex||'').slice(0,16)}…）。</span>`;
+      : '<span class="ok">已可使用凭证。</span>';
     $('btn-gen').disabled = false;
   }catch(e){
-    tip.innerHTML = `<span class="err">注册/复用失败：${e?.message||e}</span>`;
+    tip.innerHTML = '<span class="err">失败：'+(e?.message||e)+'</span>';
     console.error(e);
   }
 };
 
-/* ===== B-1. 生成助记词（立即加密；清空明文；默认整块遮挡） ===== */
+/* ====== B-1. 生成：派生 KEK → 加密助记词 → 导出分支并立即加密 → 清理明文 ====== */
 $('btn-gen').onclick = async ()=>{
   const tip = $('gen-tip');
   try{
-    // 1) 生成助记词 + 分支
+    // 1) 用 FIDO2 派生 KEK（随机 salt）
+    const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK();
+    const saltHex = toHex(salt);
+
+    // 2) 生成助记词并立即加密（只保留密文）
     const mnemonic = genMnemonic(128);
-    const words    = mnemonic.trim().split(/\s+/);
-    wordCount      = words.length || 12;
+    const encM = await aesGcmEncryptStr(kek, mnemonic);
 
-    const seed     = mnemonicToSeed(mnemonic,'');
-    branches       = exportBranches(seed);
-    $('btn-encrypt').disabled = false;
-
-    // 2) 用随机 salt + 凭证派生 KEK，立刻 AES-GCM 加密助记词
-    const saltU8 = crypto.getRandomValues(new Uint8Array(32));
-    const { kek, credential_id } = await deriveKEKWithSalt(null, saltU8);
-    const enc = await aesGcmEncryptStr(kek, mnemonic);
-
-    // 3) 仅保存密文材料；清空明文
-    sealed = {
-      credId: credential_id,
-      saltHex: [...saltU8].map(b=>b.toString(16).padStart(2,'0')).join(''),
-      ctHex: enc.ciphertext,
-      ivHex: enc.nonce
+    // 3) 导出分支，并立刻把 xprv/xpub 全部加密（只保留密文），清理明文
+    const seed    = mnemonicToSeed(mnemonic, '');
+    const br      = exportBranches(seed);
+    const encOf   = async s => s ? await aesGcmEncryptStr(kek, s) : null;
+    encBranches = {
+      ETH:  { path: br.ETH.path,  PubEnc: await encOf(br.ETH.xpub),   PrivEnc: await encOf(br.ETH.xprv) },
+      BTC:  { path: br.BTC.path,  PubEnc: await encOf(br.BTC.xpub_z), PrivEnc: await encOf(br.BTC.xprv_z) },
+      EOS:  { path: br.EOS.path,  PubEnc: await encOf(br.EOS.xpub),   PrivEnc: await encOf(br.EOS.xprv) },
+      TRON: { path: br.TRON.path, PubEnc: await encOf(br.TRON.xpub),  PrivEnc: await encOf(br.TRON.xprv) },
     };
-    try{ // 擦本地副本
-      for(let i=0;i<words.length;i++) words[i]='';
-    }catch{}
-    // 尽量覆盖字符串（JS 不保证，聊胜于无）
-    // 注：内核可能保留旧字符串副本，这在 Web 环境属正常限制
+    // 清理分支明文
+    br.ETH.xprv = br.EOS.xprv = br.TRON.xprv = null;
+    br.BTC.xprv_z = null;
+    br.ETH.xpub = br.EOS.xpub = br.TRON.xpub = null;
+    br.BTC.xpub_z = null;
 
-    // 4) UI：显示卡片、整块遮挡，启用“显示助记词”
-    showCard();
+    // 4) 保存密钥元数据（写库要用同一 KEK 信息）
+    kekMeta = { rp_id, info, credential_id, saltHex };
+
+    // 5) 助记词只保留密文 & 显示遮挡块（不保留明文）
+    sealedMnemonic = { enc: encM, credId: credential_id, saltHex };
+    wordCount = mnemonic.trim().split(/\s+/).length || 12;
+    // 尽量擦明文
+    (async()=>{ try{ /* JS 字符串不可变，仅丢弃引用 */ }catch{} })();
+
+    // UI：展示遮挡卡片
+    show($('mnemo-card'), true);
     renderMaskedGrid(wordCount);
-    showMask();
-    $('btn-reveal').disabled = false;
-    $('reveal-text').textContent = '显示助记词（需 FIDO2 解密）';
-    $('mask-hint').textContent = '助记词仅以密文形式保存在内存中。点击上方按钮，解密后显示 60 秒。';
-    tip.textContent = '';
+    show($('mnemo-mask'), true);
+    tip.textContent = '已生成并完成加密；长按 3 秒可解锁查看（显示 60 秒）。';
+    $('btn-save').disabled = false;
   }catch(e){
-    tip.innerHTML = `<span class="err">生成失败：${e?.message||e}</span>`;
+    tip.innerHTML = '<span class="err">失败：'+(e?.message||e)+'</span>';
     console.error(e);
   }
 };
 
-/* ===== B-2. 显示助记词（每次都 FIDO2 解密；显示 60 秒） ===== */
-$('btn-reveal').onclick = async ()=>{
-  if(!sealed){ return; }
-  clearAutoMask();
-  const btnText = $('reveal-text');
+/* ====== B-2. 长按 3 秒 → FIDO2 解锁助记词（显示 60 秒） ====== */
+(function attachHold(){
+  const btn = $('hold-btn'), bar=$('hold-bar'), text=$('hold-text');
+  if (!btn) return;
 
-  try{
-    btnText.textContent = '等待安全密钥…';
-    const { kek } = await deriveKEKWithSalt(sealed.credId, sealed.saltHex);
-    const mnemonic = await aesGcmDecryptStr(kek, { nonce: sealed.ivHex, ciphertext: sealed.ctHex });
+  let pressing=false, t0=0, raf=0, tmr=0;
+  const start=()=>{
+    if(pressing) return;
+    pressing=true; t0=performance.now(); bar.style.width='0%';
+    const step=()=>{
+      if(!pressing) return;
+      const p=Math.min(1,(performance.now()-t0)/HOLD_MS);
+      bar.style.width=(p*100)+'%';
+      if(p>=1){ done(); return; }
+      raf=requestAnimationFrame(step);
+    };
+    raf=requestAnimationFrame(step);
+    tmr=setTimeout(done,HOLD_MS);
+  };
+  const cancel=()=>{
+    pressing=false;
+    if(raf) cancelAnimationFrame(raf);
+    if(tmr) clearTimeout(tmr);
+    bar.style.width='0%';
+  };
 
-    const words = mnemonic.trim().split(/\s+/);
-    renderGridFromWords(words);
-    hideMask();
+  const done = async ()=>{
+    cancel();
+    try{
+      if (!sealedMnemonic) throw new Error('no encrypted mnemonic in memory');
+      clearAutoMask();
 
-    // 60 秒后自动遮挡并清理明文副本
-    autoMaskTimer = setTimeout(()=>{
-      renderMaskedGrid(wordCount);
-      showMask();
+      // 用记录的 credId + saltHex 重新派生 KEK 解密助记词
+      const { kek } = await deriveKEKWithSalt(sealedMnemonic.credId, sealedMnemonic.saltHex);
+      const mnemonic = await aesGcmDecryptStr(kek, sealedMnemonic.enc);
+
+      const words = mnemonic.trim().split(/\s+/);
+      renderWords(words);
+      show($('mnemo-mask'), false);
+
+      // 60 秒后自动遮挡并清除明文
+      autoMaskTimer = setTimeout(()=>{
+        maskNow('已自动遮挡。再次查看需再次长按并通过 FIDO2。');
+      }, REVEAL_MS);
+
+      // 擦局部副本（字符串不可变，仅丢引用；words 数组置空）
       try{ for(let i=0;i<words.length;i++) words[i]=''; }catch{}
-      $('mask-hint').textContent = '已自动遮挡。再次显示仍需 FIDO2 解密。';
-    }, SHOW_MS);
+    }catch(e){
+      console.error(e);
+      text.textContent='解锁失败，请重试';
+      setTimeout(()=> text.textContent='长按 3 秒显示助记词', 1500);
+    }
+  };
 
-    btnText.textContent = '再次显示需重新验证';
-  }catch(e){
-    console.error(e);
-    btnText.textContent = '解密失败：请重试';
-    setTimeout(()=>{ btnText.textContent='显示助记词（需 FIDO2 解密）'; }, 1500);
-  }
-};
+  ['mousedown','touchstart'].forEach(ev=>btn.addEventListener(ev,start));
+  ['mouseup','mouseleave','touchend','touchcancel'].forEach(ev=>btn.addEventListener(ev,cancel));
+})();
 
-/* ===== C. 写库（保留你原逻辑） ===== */
-$('btn-encrypt').onclick = async ()=>{
-  const tip=$('encrypt-tip');
+/* ====== C. 写库：直接使用 encBranches + kekMeta ====== */
+$('btn-save').onclick = async ()=>{
+  const tip = $('save-tip');
   try{
-    if(!branches){ alert('请先生成助记词'); return; }
-    tip.textContent='请触摸密钥以继续…';
-
-    // 这里与你原来的写库逻辑一致（与助记词无关）
-    const saltU8 = crypto.getRandomValues(new Uint8Array(32));
-    const { kek, credential_id } = await deriveKEKWithSalt(null, saltU8);
-    const enc = async s => s ? await aesGcmEncryptStr(kek, s) : null;
+    if (!encBranches || !kekMeta) { alert('请先完成生成'); return; }
 
     const bundle = {
-      KEKInfo:{ rp_id: location.hostname, info:'wallet-priv-bundle-v1',
-                salt: [...saltU8].map(b=>b.toString(16).padStart(2,'0')).join(''),
-                credential_id },
-      chains:{
-        ETH:  { path: branches.ETH.path,  PubEnc: await enc(branches.ETH.xpub),   PrivEnc: await enc(branches.ETH.xprv) },
-        BTC:  { path: branches.BTC.path,  PubEnc: await enc(branches.BTC.xpub_z), PrivEnc: await enc(branches.BTC.xprv_z) },
-        EOS:  { path: branches.EOS.path,  PubEnc: await enc(branches.EOS.xpub),   PrivEnc: await enc(branches.EOS.xprv) },
-        TRON: { path: branches.TRON.path, PubEnc: await enc(branches.TRON.xpub),  PrivEnc: await enc(branches.TRON.xprv) },
-      }
+      KEKInfo: {
+        rp_id:        kekMeta.rp_id,
+        info:         kekMeta.info,
+        salt:         kekMeta.saltHex,
+        credential_id:kekMeta.credential_id
+      },
+      chains: encBranches   // 已经是 { path, PubEnc:{nonce,ciphertext}, PrivEnc:{...} }
     };
 
     const resp = await fetch(`${API_BASE}/bundles`, {
-      method:'POST', headers:{'content-type':'application/json'},
-      body: JSON.stringify({ user_id:'web-ui', note:'初始化保存（UI）', bundle })
+      method:'POST', headers:{ 'content-type':'application/json' },
+      body: JSON.stringify({ user_id:'web-ui', note:'init (encrypted-at-generate)', bundle })
     });
     const data = await resp.json().catch(()=> ({}));
-    if(!resp.ok || !data?.ok) throw new Error(data?.error || `HTTP ${resp.status}`);
-
-    tip.textContent='';
-    branches.ETH.xprv = branches.EOS.xprv = branches.TRON.xprv = null;
-    branches.BTC.xprv_z = null;
-    alert(`写入成功：bundle_id=${data.bundle_id}`);
+    if (!resp.ok || !data?.ok) throw new Error(data?.error || `HTTP ${resp.status}`);
+    tip.innerHTML = `<span class="ok">写库成功：bundle_id=${data.bundle_id}</span>`;
   }catch(e){
-    tip.textContent='';
-    alert('写入失败：'+(e?.message||e));
+    tip.innerHTML = `<span class="err">写库失败：${e?.message||e}</span>`;
     console.error(e);
   }
 };
