--- a/init.html
+++ b/init.html
@@ -104,7 +104,7 @@
 import {
   loadCredHex, saveCredHex, clearCredHex,
   ensureCredentialWithChoice, deriveKEK, deriveKEKWithSalt,
-  aesGcmEncryptStr, aesGcmDecryptStr, discoverCredentialHex, RP_ID
+  aesGcmEncryptStr, aesGcmDecryptStr, discoverCredentialHex
 } from './js/fido2.js';
 import { genMnemonic, mnemonicToSeed, exportBranches } from './js/hdwallet-core.js';
 
